[package]
name = "tex-packer"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
tauri = { version = "1.0.0", features = ["api-all"] }
lazy_static = "1.0.0"
tiny_http = "0.11"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

